test/negative/113_augmented_non_lvalue.fx
// expect: l-value
1 += 2
