test/negative/113_augmented_non_lvalue.err
113_augmented_non_lvalue.fx:2:3: error: left-hand-side of the assignment is not an l-value
